# veidtcoin-core

./: CMakeLists.txt  LICENSE  README.md  cryptonote_config.h  main.cpp
genesis/: genesis_block.txt
src/: version.cpp
src/blockchain_db/: db_lmdb.cpp
src/core/: blockchain.cpp  blockchain.h  consensus.h
src/crypto/: crypto.cpp  crypto.h  ringct.cpp  ringct.h
src/cryptonote_basic/: account.cpp  account.h
src/daemon/: main.cpp
src/genesis/: genesis.cpp  genesis.h
src/network/: net_config.cpp  net_config.h  p2p.cpp  p2p.h
src/src/crypto/: crypto.cpp  ringct.cpp
src/util/: timeutils.cpp  timeutils.h
src/wallet/: wallet2.cpp
